--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,6 +3,9 @@ jobs:
   build-test:
     docker:
       - image: circleci/python:3.5.1
+	environment:
+	  TF_BINARY_URL: https://storage.googleapis.com/tensorflow/linux/cpu/tensorflow-0.10.0rc0-cp35-cp35m-linux_x86_64.whl
+	  KERAS_BACKEND: tensorflow
     working_directory: ~/
     steps:
       - run: sudo pip install -U $TF_BINARY_URL
