--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,13 +1,16 @@
 version: 2
 jobs:
-  build-test:
-    docker:
-      - image: circleci/python:3.5.1
-	environment:
-	  TF_BINARY_URL: https://storage.googleapis.com/tensorflow/linux/cpu/tensorflow-0.10.0rc0-cp35-cp35m-linux_x86_64.whl
-	  KERAS_BACKEND: tensorflow
+  build:
     working_directory: ~/
+    docker:
+      - image: circleci/python:3.6.4
+	    environment:
+	      TF_BINARY_URL: https://storage.googleapis.com/tensorflow/linux/cpu/tensorflow-0.10.0rc0-cp35-cp35m-linux_x86_64.whl
+	      KERAS_BACKEND: tensorflow
     steps:
+      - checkout
+      - run: sudo chown -R circleci:circleci /usr/local/bin
+      - run: sudo chown -R circleci:circleci /usr/local/lib/python3.6/site-packages
       - run: sudo pip install -U $TF_BINARY_URL
       - run: sudo pip install Keras
       - run:
@@ -16,6 +19,6 @@ jobs:
 
 workflows:
   version: 2
-  build-test-and-deploy:
+  build-test:
     jobs:
-      - build-test:
+      - build:
