--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,6 @@
 version: 2
 jobs:
-  build:
+  test:
     working_directory: ~/
     docker:
       - image:circleci/python:3.6.4
@@ -16,3 +16,9 @@ jobs:
       - run:
           name: 'python run_custom_env.py'
           command: python run_custom_env.py
+
+  workflows:
+  version: 2
+  build_and_test:
+    jobs:
+      - test
