--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,6 +13,7 @@ jobs:
       - run: sudo chown -R circleci:circleci /usr/local/lib/python3.5/site-packages
       - run: sudo pip install -U $TF_BINARY_URL
       - run: sudo pip install Keras
+      - run: sudo pip install gym
       - run:
           name: 'python run_custom_env.py'
           command: python run_custom_env.py
